--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -2,26 +2,35 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+body{
+  /* background-color: gray; */
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+#login-background{
+  min-height: 100vh; 
+  margin:0vh;
+  padding-top: 10vh;
+  padding-bottom: 10vh;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+#login-box{
+  margin: 0vh 60vh 0vh 60vh;
+  min-height: 70vh; 
+  width:80vh;
+  min-width: 50vh; 
+  max-width: 150vh;
+  border-radius: 20px;
+}
+
+.twitter-icon{
+  color: white;
+}
+
+#userName{
+  border-color: grey;
+}
+#userName:focus{
+  border-color: #008ae6;
+  border-width: 3px;
+  outline:none
 }
